message auth_receiver {
  required string session_guid=1;
  required string receiver_guid=2;
  required int32 is_receiving_public_key=3;
  required int32 is_receiving_finish=4;
  required string receiver_public_key=5;
  required int32 should_abort=6;
}
